finish preprocessing section

--- a/main.ipynb
+++ b/main.ipynb
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -764,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -865,8 +865,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "def preprocess_data(raw_text_iterator):\n",
@@ -879,6 +883,259 @@
     "\n",
     "    # concatenate all the tensors that are not empty\n",
     "    return torch.cat(tuple(filter( lambda t: t.numel() > 0, data)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we create all the datasets:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "train_iter, val_iter, test_iter = get_all_iterators()\n",
+    "train_data = preprocess_data(train_iter)\n",
+    "val_data = preprocess_data(val_iter)\n",
+    "test_data = preprocess_data(test_iter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([17942100]), torch.Size([1408369]), torch.Size([1653073]))"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.shape, val_data.shape, test_iter.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pretty long, aren't they?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now make a batching function. It simply splits the $N$-dimensional dataset into a $N / B \\times B$ array, which we can then slice in the sequence dimension to get individual batches. We discard any data that does not fit cleanly into this tensor."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def batchify(data, batch_size):\n",
+    "    seq_len = data.size(0) // batch_size\n",
+    "    data = data[:seq_len * batch_size]\n",
+    "    data = data.view(batch_size, seq_len).t().contiguous()\n",
+    "    return data\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's explore how the function works."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_toy = train_data.clone()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([17942100]), torch.Size([280345, 64]), 280345)"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_size = 64\n",
+    "batched = batchify(train_toy, batch_size)\n",
+    "train_toy.shape, batched.shape, train_toy.shape[0] // batch_size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's batch all our data:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "batch_size = 64\n",
+    "eval_batch_size = 32\n",
+    "train_data = batchify(train_data, batch_size)\n",
+    "val_data = batchify(val_data, eval_batch_size)\n",
+    "test_data = batchify(test_data, eval_batch_size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Functions to generate input and output sequences\n",
+    "We create a function that fetches the input and the target of a batch:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "training_seq_len = 50"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def get_batch(source: Tensor, idx: int) :\n",
+    "    seq_len = min(training_seq_len, len(source) - 1 - idx)\n",
+    "    data = source[idx: idx + seq_len]\n",
+    "    target = source[idx + 1:idx + 1 + seq_len].reshape(-1)\n",
+    "    return data, target\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A question: why on earth the reshape to a 1d vector?? Let's look at an example output:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([19, 64]), torch.Size([1216]))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X, y = get_batch(train_data[:20, :], 0)\n",
+    "X.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1216\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([  10,   11,  154, 1665,    2, 5125,    5,    7,  157, 4983,    1,   10,\n",
+       "           87,  858,    2,   10,  117,   71,    6]),\n",
+       " tensor([  11,  154, 1665,    2, 5125,    5,    7,  157, 4983,    1,   10,   87,\n",
+       "          858,    2,   10,  117,   71,    6,  426]))"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(19 * 64)\n",
+    "X[:, 0], y[0::64]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create the model instance"
    ]
   }
  ],
