make my way to training

--- a/main.ipynb
+++ b/main.ipynb
@@ -936,6 +936,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now make a batching function. It simply splits the $N$-dimensional dataset into a $N / B \\times B$ array, which we can then slice in the sequence dimension to get individual batches. We discard any data that does not fit cleanly into this tensor."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
@@ -945,31 +952,12 @@
    },
    "outputs": [],
    "source": [
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We now make a batching function. It simply splits the $N$-dimensional dataset into a $N / B \\times B$ array, which we can then slice in the sequence dimension to get individual batches. We discard any data that does not fit cleanly into this tensor."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "notebookRunGroups": {
-     "groupValue": "1"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "def batchify(data, batch_size):\n",
     "    seq_len = data.size(0) // batch_size\n",
     "    data = data[:seq_len * batch_size]\n",
     "    data = data.view(batch_size, seq_len).t().contiguous()\n",
-    "    return data\n"
+    "    return data.to(device)\n"
    ]
   },
   {
@@ -1011,6 +999,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batched = None"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1019,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -1044,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -1057,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "notebookRunGroups": {
      "groupValue": "1"
@@ -1136,6 +1133,69 @@
    "metadata": {},
    "source": [
     "# Create the model instance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "n_tokens = len(vocab)\n",
+    "embedding_dim = 200\n",
+    "d_hidden = 200\n",
+    "n_layers = 2\n",
+    "n_attn_heads = 2\n",
+    "dropout = 0.2\n",
+    "\n",
+    "net = TransformerModel(\n",
+    "    n_token=n_tokens,\n",
+    "    d_model=embedding_dim,\n",
+    "    n_attn_head=n_attn_heads,\n",
+    "    d_hidden=d_hidden,\n",
+    "    n_layers=n_layers,\n",
+    "    dropout=dropout\n",
+    ").to(device)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train the model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to train the model, we need to create an attention mask. This mask prevents the model from incorporating information from future words in the encoding for a word. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import copy\n",
+    "import time\n",
+    "\n",
+    "loss_fn = nn.CrossEntropyLoss()\n",
+    "lr = 5.0\n",
+    "optimizer = torch.optim.SGD(net.parameters(), lr=lr)\n",
+    "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=1.0, gamma=0.95)\n",
+    "\n",
+    "def train(net):\n",
+    "    net.train()\n",
+    "    total_loss = 0.\n",
+    "    log_interval = 200\n",
+    "    start_time = time.time()\n",
+    "    s"
    ]
   }
  ],
